--- a/css/style.css
+++ b/css/style.css
@@ -962,7 +962,7 @@ span {
 
   background-color: #658a28;
   border-radius: 5px;
-  box-shadow: 0 0 2px rgba(101, 138, 40, 0.5)), 0 0 4px rgba(101, 138, 40, 0.5), 0 0 6px rgba(101, 138, 40, 0.5);
+  box-shadow: 0 0 2px rgba(101, 138, 40, 0.5), 0 0 4px rgba(101, 138, 40, 0.5), 0 0 6px rgba(101, 138, 40, 0.5);
 }
 
 .faq_head_title.active
