--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
 }
 .hide_background {
   width: 100%;
-  height: 100vh;
+  height: 1000000vh;
 
   display: none;
 
@@ -47,6 +47,10 @@ a {
   z-index: 3;
   top: 0;
   left: 0;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
 }
 
 /* INTRO */
