--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,8 @@ a {
   left: 0;
 
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px) !important;
+  -webkit-backdrop-filter: blur(6px) !important;
 }
 
 /* INTRO */
