--- a/css/style.css
+++ b/css/style.css
@@ -513,23 +513,37 @@ a {
 .factions_icons_block:nth-child(1).active {
   transform: rotate(0);
   background-color: #83838380;
+  animation: rotate_icon_block 6s linear infinite;
 }
 .factions_icons_block:nth-child(2).active {
   transform: rotate(0);
   background-color: #009f1380;
+  animation: rotate_icon_block 6s linear infinite;
 }
 .factions_icons_block:nth-child(3).active {
   transform: rotate(0);
   background-color: #7600e180;
+  animation: rotate_icon_block 6s linear infinite;
 }
 .factions_icons_block:nth-child(4).active {
   transform: rotate(0);
   background-color: #6a1f1f80;
+  animation: rotate_icon_block 6s linear infinite;
 }
 .factions_icons_block:nth-child(5).active {
   transform: rotate(0);
   background-color: #9f7c0080;
+  animation: rotate_icon_block 6s linear infinite;
 }
+@keyframes rotate_icon_block {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .factions_icons_block {
   width: 40px;
   height: 40px;
@@ -541,7 +555,7 @@ a {
   overflow: hidden;
 
   transform: rotate(-45deg);
-  transition: 0.6s ease;
+  transition: 0.3s ease;
 
   margin: 0 auto;
   border-radius: 5px;
@@ -575,12 +589,13 @@ a {
 .factions_icons_block.active
 .factions_icons {
   transform: rotate(0);
+  animation: rotate_icon 6s linear infinite;
 }
 .factions_icons {
   font-size: 18px;
   color: #fff;
 
-  transition: 0.6s ease;
+  transition: 0.3s ease;
 
   transform: rotate(45deg);
 }
@@ -588,7 +603,14 @@ a {
 .factions_icons {
   transform: rotate(0);
 }
-
+@keyframes rotate_icon {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
 
 .factions_info.active {
   display: block;
