--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,9 @@ a {
   0% {
     transform: rotate(0);
   }
+  50% {
+    transform: rotate(180deg);
+  }
   100% {
     transform: rotate(360deg);
   }
