--- a/css/style.css
+++ b/css/style.css
@@ -721,6 +721,7 @@ img {
   opacity: 0;
   pointer-events: none;
   transition: 0.3s ease;
+  cursor: auto;
 
   padding: 15px 10px;
   margin: 14px 0 0 -10px;
@@ -741,7 +742,33 @@ img {
 }
 
 .nft_span {
+  width: fit-content;
   font-size: 15px;
+}
+.nft_span:hover {
+  animation: blink_span .5s ease;
+}
+@keyframes blink_span {
+  0% {
+    text-shadow: 0 0 2px rgba(101, 138, 40, 0.5), 0 0 4px rgba(101, 138, 40, 0.5), 0 0 6px rgba(101, 138, 40, 0.5);
+    color: #658a28;
+  }
+  25% {
+    text-shadow: none;
+    color: #fff;
+  }
+  50% {
+    text-shadow: 0 0 2px rgba(101, 138, 40, 0.5), 0 0 4px rgba(101, 138, 40, 0.5), 0 0 6px rgba(101, 138, 40, 0.5);
+    color: #658a28;
+  }
+  75% {
+    text-shadow: none;
+    color: #fff;
+  }
+  100% {
+    text-shadow: 0 0 2px rgba(101, 138, 40, 0.5), 0 0 4px rgba(101, 138, 40, 0.5), 0 0 6px rgba(101, 138, 40, 0.5);
+    color: #658a28;
+  }
 }
 
 .nft_link {
