--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ a {
   grid-row-gap: 30px;
   perspective: 800px;
 
-  padding: 50px 15px;
+  padding: 100px 15px;
   margin: 0 auto;
   background-color: #04071b;
 }
@@ -455,7 +455,7 @@ a {
   align-items: center;
 
   margin: 0 auto;
-  padding: 50px 15px;
+  padding: 100px 15px;
   background-color: #04071b;
 }
 
@@ -482,6 +482,7 @@ a {
   width: 100%;
 
   background-color: #04071b;
+  padding: 100px 15px;
 }
 
 .factions_content {
@@ -491,6 +492,8 @@ a {
   display: grid;
   grid-template-columns: 1fr;
   gap: 30px;
+
+  overflow: hidden;
 
   margin: 0 auto;
   padding: 50px 15px 100px;
@@ -695,7 +698,7 @@ img {
   transform: translate(-50%, -50%);
 
   width: 70px;
-  height: 80px;
+  height: 70px;
 
   background-color: #000;
   border: 1px solid #ffffff80;
@@ -724,7 +727,7 @@ img {
   cursor: auto;
 
   padding: 15px 10px;
-  margin: 14px 0 0 -10px;
+  margin: 9px 0 0 -10px;
   background-color: #000;
   border: 1px solid #ffffff80;
 }
@@ -840,7 +843,7 @@ img {
   -webkit-perspective-origin: top;
 
   margin: 0 auto;
-  padding: 50px 15px 70px;
+  padding: 100px 15px;
   background-color: #04071b;
 }
 
@@ -915,6 +918,7 @@ img {
   width: 100%;
 
   background-color: #04071b;
+  padding: 100px 15px;
 }
 
 .roadmap_content {
@@ -1038,6 +1042,7 @@ img {
   width: 100%;
 
   background-color: #04071b;
+  padding: 100px 15px;
 }
 
 .faq_content {
@@ -1356,7 +1361,7 @@ img {
     transform: translate(-50%, -50%);
 
     width: 70px;
-    height: 80px;
+    height: 70px;
 
     background-color: #000;
     border: 1px solid #ffffff80;
